@@ -266,6 +266,21 @@ public class ClientException extends BaseException {
     public static final String ACCESS_DENIED = "access_denied";
 
     /**
+     * Access token missing
+     */
+    public static final String ACCESS_TOKEN_MISSING = "access_token_missing";
+
+    /**
+     * Id token missing
+     */
+    public static final String ID_TOKEN_MISSING = "id_token_missing";
+
+    /**
+     * refresh token missing
+     */
+    public static final String REFRESH_TOKEN_MISSING = "refresh_token_missing";
+
+    /**
      * Constructor of ClientException.
      *
      * @param errorCode String
