@@ -13,6 +13,7 @@ vNext
 - Replace deprecated HttpRequest.sendGet usage with HttpClient.get (#1038)
 - Replace deprecated HttpRequest.sendPost usage with HttpClient.post (#1037)
 - (MSALCPP) Validate ATs before persisting to the cache (#1192)
+- Added explicit exceptions when access token, id token or refresh token, which are required are not included in the response.  (MSAL #563)
 
 Version 3.0.8
 ----------
